add section partition discovering into read parquet

--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/02_ReadWriteParquetFile.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/02_ReadWriteParquetFile.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
@@ -38,14 +38,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/02/12 02:22:32 WARN Utils: Your hostname, ubuntu resolves to a loopback address: 127.0.1.1; using 192.168.184.146 instead (on interface ens33)\n",
-      "22/02/12 02:22:32 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/02/13 04:37:22 WARN Utils: Your hostname, ubuntu resolves to a loopback address: 127.0.1.1; using 192.168.184.146 instead (on interface ens33)\n",
+      "22/02/13 04:37:22 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "WARNING: An illegal reflective access operation has occurred\n",
       "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/spark/spark-3.1.2/jars/spark-unsafe_2.12-3.1.2.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
       "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
       "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
       "WARNING: All illegal access operations will be denied in a future release\n",
-      "22/02/12 02:22:33 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/02/13 04:37:22 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -213,7 +213,132 @@
    "source": [
     "## 3.2.2 Partition discovering\n",
     "\n",
-    "In the above example, we read a single parquet file. Now let's read a partitioned parquet file. All built-in file sources (including Text/CSV/JSON/ORC/Parquet) are able to discover and infer partitioning information automatically."
+    "In the above example, we read a single parquet file. Now let's read a partitioned parquet file. All built-in file sources (including Text/CSV/JSON/ORC/Parquet) are able to discover and infer partitioning information automatically.\n",
+    "\n",
+    "In below example, we will read a parquet file that are already partitioned by `column sex and race`. The parquet files are organized in below directories\n",
+    "\n",
+    "```text\n",
+    "├── sex=Female\n",
+    "│   ├── race=Amer-Indian-Eskimo\n",
+    "│   ├── race=Asian-Pac-Islander\n",
+    "│   ├── race=Black\n",
+    "│   ├── race=Other\n",
+    "│   └── race=White\n",
+    "├── sex=Male\n",
+    "│   ├── race=Amer-Indian-Eskimo\n",
+    "│   ├── race=Asian-Pac-Islander\n",
+    "│   ├── race=Black\n",
+    "│   ├── race=Other\n",
+    "│   └── race=White\n",
+    "```\n",
+    "\n",
+    "By passing `data/partition_by_col` to either SparkSession.read.parquet or SparkSession.read.load, Spark SQL will automatically extract the partitioning information from the paths.\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "df_pre_partition=spark.read.parquet(\"data/partition_by_col\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----------------+------+---------+-------------+------------------+-----------------+-------------+------------+------------+--------------+--------------+------+----+-----+\n",
+      "|age|       workclass|fnlwgt|education|education-num|    marital-status|       occupation| relationship|capital-gain|capital-loss|hours-per-week|native-country|income| sex| race|\n",
+      "+---+----------------+------+---------+-------------+------------------+-----------------+-------------+------------+------------+--------------+--------------+------+----+-----+\n",
+      "| 39|       State-gov| 77516|Bachelors|           13|     Never-married|     Adm-clerical|Not-in-family|        2174|           0|            40| United-States| <=50K|Male|White|\n",
+      "| 50|Self-emp-not-inc| 83311|Bachelors|           13|Married-civ-spouse|  Exec-managerial|      Husband|           0|           0|            13| United-States| <=50K|Male|White|\n",
+      "| 38|         Private|215646|  HS-grad|            9|          Divorced|Handlers-cleaners|Not-in-family|           0|           0|            40| United-States| <=50K|Male|White|\n",
+      "| 52|Self-emp-not-inc|209642|  HS-grad|            9|Married-civ-spouse|  Exec-managerial|      Husband|           0|           0|            45| United-States|  >50K|Male|White|\n",
+      "| 42|         Private|159449|Bachelors|           13|Married-civ-spouse|  Exec-managerial|      Husband|        5178|           0|            40| United-States|  >50K|Male|White|\n",
+      "+---+----------------+------+---------+-------------+------------------+-----------------+-------------+------------+------------+--------------+--------------+------+----+-----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_pre_partition.show(5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== Physical Plan ==\n",
+      "*(1) ColumnarToRow\n",
+      "+- FileScan parquet [age#173,workclass#174,fnlwgt#175,education#176,education-num#177,marital-status#178,occupation#179,relationship#180,capital-gain#181,capital-loss#182,hours-per-week#183,native-country#184,income#185,sex#186,race#187] Batched: true, DataFilters: [], Format: Parquet, Location: InMemoryFileIndex[file:/home/pliu/git/PySparkCommonFunc/notebooks/pysparkbasics/L03_ReadFromVario..., PartitionFilters: [isnotnull(sex#186), isnotnull(race#187), (sex#186 = Female), (race#187 = White)], PushedFilters: [], ReadSchema: struct<age:int,workclass:string,fnlwgt:int,education:string,education-num:int,marital-status:stri...\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_pre_partition.filter((col(\"sex\")==\"Female\") & (col(\"race\")==\"White\")).explain()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "You can notice in the execution plan, we have below lines:\n",
+    "\n",
+    "```text\n",
+    "PartitionFilters: [isnotnull(sex#186), isnotnull(race#187), (sex#186 = Female), (race#187 = White)]\n",
+    "```\n",
+    "This means spark worker will only read parquet file that are located in folder `sex=Female/race=White`. This will reduce dramatically the io time."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Infer partitioning columns type\n",
+    "\n",
+    "Notice that the data types of the partitioning columns are automatically inferred. Currently, numeric data types, date, timestamp and string type are supported. Sometimes users may not want to automatically infer the data types of the partitioning columns. For these use cases, the automatic type inference can be configured by spark.sql.sources.partitionColumnTypeInference.enabled, which is default to true. When type inference is disabled, string type will be used for the partitioning columns.\n",
+    "\n",
+    "Starting from Spark 1.6.0, partition discovery only finds partitions under the given paths by default. For the above example, if users pass path/to/table/sex=Male to either SparkSession.read.parquet or SparkSession.read.load, **sex will not be considered as a partitioning column**. If users need to specify the base path that partition discovery should start with, they can set basePath in the data source options. For example, when path/to/table/sex=Male is the path of the data and users set basePath to path/to/table/, sex will be a partitioning column."
    ],
    "metadata": {
     "collapsed": false,
@@ -244,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -267,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "output_path=\"/tmp/out_test\"\n",
@@ -282,19 +407,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "total 332K\r\n",
-      "drwxr-xr-x  2 pliu pliu 4.0K Feb 12 06:33 .\r\n",
-      "drwxrwxrwt 26 root root 4.0K Feb 12 06:33 ..\r\n",
-      "-rw-r--r--  1 pliu pliu 314K Feb 12 06:33 part-00000-513396ab-0d8a-4322-8ced-3e3f1c8265e2-c000.snappy.parquet\r\n",
-      "-rw-r--r--  1 pliu pliu 2.5K Feb 12 06:33 .part-00000-513396ab-0d8a-4322-8ced-3e3f1c8265e2-c000.snappy.parquet.crc\r\n",
-      "-rw-r--r--  1 pliu pliu    0 Feb 12 06:33 _SUCCESS\r\n",
-      "-rw-r--r--  1 pliu pliu    8 Feb 12 06:33 ._SUCCESS.crc\r\n"
+      "drwxr-xr-x  2 pliu pliu 4.0K Feb 13 04:38 .\r\n",
+      "drwxrwxrwt 24 root root 4.0K Feb 13 04:38 ..\r\n",
+      "-rw-r--r--  1 pliu pliu 314K Feb 13 04:38 part-00000-1fa85890-3ab1-4770-8df5-7a8a0789689e-c000.snappy.parquet\r\n",
+      "-rw-r--r--  1 pliu pliu 2.5K Feb 13 04:38 .part-00000-1fa85890-3ab1-4770-8df5-7a8a0789689e-c000.snappy.parquet.crc\r\n",
+      "-rw-r--r--  1 pliu pliu    0 Feb 13 04:38 _SUCCESS\r\n",
+      "-rw-r--r--  1 pliu pliu    8 Feb 13 04:38 ._SUCCESS.crc\r\n"
      ]
     }
    ],
@@ -322,14 +447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "== Physical Plan ==\n",
-      "Exchange hashpartitioning(age#0, 4), REPARTITION_WITH_NUM, [id=#151]\n",
+      "Exchange hashpartitioning(age#0, 4), REPARTITION_WITH_NUM, [id=#72]\n",
       "+- *(1) ColumnarToRow\n",
       "   +- FileScan parquet [age#0,workclass#1,fnlwgt#2,education#3,education-num#4,marital-status#5,occupation#6,relationship#7,race#8,sex#9,capital-gain#10,capital-loss#11,hours-per-week#12,native-country#13,income#14] Batched: true, DataFilters: [], Format: Parquet, Location: InMemoryFileIndex[file:/home/pliu/git/PySparkCommonFunc/notebooks/pysparkbasics/L03_ReadFromVario..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<age:int,workclass:string,fnlwgt:int,education:string,education-num:int,marital-status:stri...\n",
       "\n",
@@ -350,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# Note all dataframe are immutable, you need to create a new dataframe to save the modified dataframe\n",
@@ -365,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -388,18 +513,8 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "df1.write.mode(\"overwrite\").parquet(output_path)"
@@ -413,16 +528,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "part-00000-d8a1f2a5-4b5c-4f4c-8c04-d7972e3f9fcd-c000.snappy.parquet\r\n",
-      "part-00001-d8a1f2a5-4b5c-4f4c-8c04-d7972e3f9fcd-c000.snappy.parquet\r\n",
-      "part-00002-d8a1f2a5-4b5c-4f4c-8c04-d7972e3f9fcd-c000.snappy.parquet\r\n",
-      "part-00003-d8a1f2a5-4b5c-4f4c-8c04-d7972e3f9fcd-c000.snappy.parquet\r\n",
+      "part-00000-ef98e7df-2416-4a55-af97-21db7728c2ac-c000.snappy.parquet\r\n",
+      "part-00001-ef98e7df-2416-4a55-af97-21db7728c2ac-c000.snappy.parquet\r\n",
+      "part-00002-ef98e7df-2416-4a55-af97-21db7728c2ac-c000.snappy.parquet\r\n",
+      "part-00003-ef98e7df-2416-4a55-af97-21db7728c2ac-c000.snappy.parquet\r\n",
       "_SUCCESS\r\n"
      ]
     }
@@ -430,18 +545,6 @@
    "source": [
     "!ls {output_path}"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -487,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "compression_algo=\"gzip\"\n",
@@ -495,7 +598,7 @@
     "df.write\\\n",
     "    .mode(\"overwrite\")\\\n",
     "    .option(\"parquet.compression\",compression_algo) \\\n",
-    "    .parquet(output_path)\n"
+    "    .parquet(output_path)"
    ],
    "metadata": {
     "collapsed": false,
@@ -506,19 +609,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "total 260K\r\n",
-      "drwxr-xr-x  2 pliu pliu 4.0K Feb 12 06:24 .\r\n",
-      "drwxrwxrwt 26 root root 4.0K Feb 12 06:24 ..\r\n",
-      "-rw-r--r--  1 pliu pliu 242K Feb 12 06:24 part-00000-a56b9b54-2dd7-444a-8116-796d298f439d-c000.gz.parquet\r\n",
-      "-rw-r--r--  1 pliu pliu 1.9K Feb 12 06:24 .part-00000-a56b9b54-2dd7-444a-8116-796d298f439d-c000.gz.parquet.crc\r\n",
-      "-rw-r--r--  1 pliu pliu    0 Feb 12 06:24 _SUCCESS\r\n",
-      "-rw-r--r--  1 pliu pliu    8 Feb 12 06:24 ._SUCCESS.crc\r\n"
+      "drwxr-xr-x  2 pliu pliu 4.0K Feb 13 04:39 .\r\n",
+      "drwxrwxrwt 24 root root 4.0K Feb 13 04:39 ..\r\n",
+      "-rw-r--r--  1 pliu pliu 242K Feb 13 04:39 part-00000-22c925cb-f655-44d9-b7b9-52c70d45e0a0-c000.gz.parquet\r\n",
+      "-rw-r--r--  1 pliu pliu 1.9K Feb 13 04:39 .part-00000-22c925cb-f655-44d9-b7b9-52c70d45e0a0-c000.gz.parquet.crc\r\n",
+      "-rw-r--r--  1 pliu pliu    0 Feb 13 04:39 _SUCCESS\r\n",
+      "-rw-r--r--  1 pliu pliu    8 Feb 13 04:39 ._SUCCESS.crc\r\n"
      ]
     }
    ],
@@ -574,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stderr",
@@ -596,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -610,38 +713,38 @@
       "'race=Asian-Pac-Islander'  'race=Other'\r\n",
       "\r\n",
       "'/tmp/out_test/sex=Female/race=Amer-Indian-Eskimo':\r\n",
-      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "part-00000-c7c73c82-318c-4624-a885-f4d6ee634fd3.c000.snappy.parquet\r\n",
       "\r\n",
       "'/tmp/out_test/sex=Female/race=Asian-Pac-Islander':\r\n",
-      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "part-00000-c7c73c82-318c-4624-a885-f4d6ee634fd3.c000.snappy.parquet\r\n",
       "\r\n",
       "'/tmp/out_test/sex=Female/race=Black':\r\n",
-      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "part-00000-c7c73c82-318c-4624-a885-f4d6ee634fd3.c000.snappy.parquet\r\n",
       "\r\n",
       "'/tmp/out_test/sex=Female/race=Other':\r\n",
-      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "part-00000-c7c73c82-318c-4624-a885-f4d6ee634fd3.c000.snappy.parquet\r\n",
       "\r\n",
       "'/tmp/out_test/sex=Female/race=White':\r\n",
-      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "part-00000-c7c73c82-318c-4624-a885-f4d6ee634fd3.c000.snappy.parquet\r\n",
       "\r\n",
       "'/tmp/out_test/sex=Male':\r\n",
       "'race=Amer-Indian-Eskimo'  'race=Black'  'race=White'\r\n",
       "'race=Asian-Pac-Islander'  'race=Other'\r\n",
       "\r\n",
       "'/tmp/out_test/sex=Male/race=Amer-Indian-Eskimo':\r\n",
-      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "part-00000-c7c73c82-318c-4624-a885-f4d6ee634fd3.c000.snappy.parquet\r\n",
       "\r\n",
       "'/tmp/out_test/sex=Male/race=Asian-Pac-Islander':\r\n",
-      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "part-00000-c7c73c82-318c-4624-a885-f4d6ee634fd3.c000.snappy.parquet\r\n",
       "\r\n",
       "'/tmp/out_test/sex=Male/race=Black':\r\n",
-      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "part-00000-c7c73c82-318c-4624-a885-f4d6ee634fd3.c000.snappy.parquet\r\n",
       "\r\n",
       "'/tmp/out_test/sex=Male/race=Other':\r\n",
-      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "part-00000-c7c73c82-318c-4624-a885-f4d6ee634fd3.c000.snappy.parquet\r\n",
       "\r\n",
       "'/tmp/out_test/sex=Male/race=White':\r\n",
-      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n"
+      "part-00000-c7c73c82-318c-4624-a885-f4d6ee634fd3.c000.snappy.parquet\r\n"
      ]
     }
    ],
