change intro of read csv

--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/03_ReadWriteCSVFile.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/03_ReadWriteCSVFile.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "# 3.3 Read write csv files\n",
-    "The official doc can be found [here](https://spark.apache.org/docs/latest/sql-data-sources-csv.html). Apache Parquet file is a columnar storage format available to any project in the Hadoop ecosystem, regardless of the choice of data processing framework, data model, or programming language.\n"
+    "The official doc can be found [here](https://spark.apache.org/docs/latest/sql-data-sources-csv.html). Spark SQL provides spark.read().csv(\"file_name\") to read a file or directory of files in CSV format into Spark DataFrame, and dataframe.write().csv(\"path\") to write to a CSV file. Function option() can be used to customize the behavior of reading or writing, such as controlling behavior of the header, delimiter character, character set, and so on."
    ]
   },
   {
