--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/04_ReadWriteJsonFile.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/04_ReadWriteJsonFile.ipynb
@@ -1,15 +1,62 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "# 3.4 Read write json files\n",
+    "The official doc can be found [here](https://spark.apache.org/docs/latest/sql-data-sources-json.html). Spark SQL can automatically infer the schema of a JSON dataset and load it as a Dataset[Row]. This conversion can be done using SparkSession.read.json() on either a Dataset[String], or a JSON file.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
-    ""
-   ]
+    "from pyspark.sql import SparkSession\n",
+    "import os"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "local=True\n",
+    "if local:\n",
+    "    spark=SparkSession.builder.master(\"local[4]\") \\\n",
+    "                  .appName(\"ReadWriteJson\").getOrCreate()\n",
+    "else:\n",
+    "    spark=SparkSession.builder \\\n",
+    "                      .master(\"k8s://https://kubernetes.default.svc:443\") \\\n",
+    "                      .appName(\"ReadWriteJson\") \\\n",
+    "                      .config(\"spark.kubernetes.container.image\",os.environ[\"IMAGE_NAME\"]) \\\n",
+    "                      .config(\"spark.kubernetes.authenticate.driver.serviceAccountName\",os.environ['KUBERNETES_SERVICE_ACCOUNT']) \\\n",
+    "                      .config(\"spark.kubernetes.namespace\", os.environ['KUBERNETES_NAMESPACE']) \\\n",
+    "                      .config(\"spark.executor.instances\", \"4\") \\\n",
+    "                      .config(\"spark.executor.memory\",\"8g\") \\\n",
+    "                      .config(\"spark.kubernetes.driver.pod.name\", os.environ[\"POD_NAME\"]) \\\n",
+    "                      .config('spark.jars.packages','org.postgresql:postgresql:42.2.24') \\\n",
+    "                      .getOrCreate()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
