finish read write text file

--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/05_ReadWriteTextFile.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/05_ReadWriteTextFile.ipynb
@@ -1,15 +1,483 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
+   "source": [
+    "# 3.5 Read write Text files\n",
+    "\n",
+    "The official doc can be found [here](https://spark.apache.org/docs/latest/sql-data-sources-text.html). Spark SQL provides spark.read().text(\"file_name\") to read a file or directory of text files into a Spark DataFrame, and dataframe.write().text(\"path\") to write to a text file. When reading a text file, each line becomes each row that has string “value” column by default. The line separator can be changed as shown in the example below. The option() function can be used to customize the behavior of reading or writing, such as controlling behavior of the line separator, compression, and so on.\n",
+    "\n",
+    "At the end of this tutorial, We will also talk about how to read text files to rdd, you can skip it if you want.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    ""
-   ]
+    "from pyspark.sql import SparkSession\n",
+    "import os"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/02/15 15:47:13 WARN Utils: Your hostname, pliu-SATELLITE-P850 resolves to a loopback address: 127.0.1.1; using 172.22.0.33 instead (on interface wlp3s0)\n",
+      "22/02/15 15:47:13 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/spark/spark-3.1.2/jars/spark-unsafe_2.12-3.1.2.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "22/02/15 15:47:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
+   "source": [
+    "local=True\n",
+    "if local:\n",
+    "    spark=SparkSession.builder.master(\"local[4]\") \\\n",
+    "                  .appName(\"ReadWriteText\").getOrCreate()\n",
+    "else:\n",
+    "    spark=SparkSession.builder \\\n",
+    "                      .master(\"k8s://https://kubernetes.default.svc:443\") \\\n",
+    "                      .appName(\"ReadWriteText\") \\\n",
+    "                      .config(\"spark.kubernetes.container.image\",os.environ[\"IMAGE_NAME\"]) \\\n",
+    "                      .config(\"spark.kubernetes.authenticate.driver.serviceAccountName\",os.environ['KUBERNETES_SERVICE_ACCOUNT']) \\\n",
+    "                      .config(\"spark.kubernetes.namespace\", os.environ['KUBERNETES_NAMESPACE']) \\\n",
+    "                      .config(\"spark.executor.instances\", \"4\") \\\n",
+    "                      .config(\"spark.executor.memory\",\"8g\") \\\n",
+    "                      .config(\"spark.kubernetes.driver.pod.name\", os.environ[\"POD_NAME\"]) \\\n",
+    "                      .config('spark.jars.packages','org.postgresql:postgresql:42.2.24') \\\n",
+    "                      .getOrCreate()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.5.1 Read text file into Dataframe\n",
+    "\n",
+    "You can notice in below example, when reading a text file, spark uses \"\\n\" as default line separator. As a result, each line becomes each row that has “value” as column name."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "text_file_path=\"data/text/users1.txt\"\n",
+    "df=spark.read.text(text_file_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 0:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+\n",
+      "|       value|\n",
+      "+------------+\n",
+      "|  alice F 32|\n",
+      "|    bob M 38|\n",
+      "|Charlie M 48|\n",
+      "+------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- value: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.printSchema()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can change the default line separator by using option('lineSep','value'). In below example, we set space as line separator."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "df_sep=spark.read.option('lineSep',' ').text(text_file_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|     value|\n",
+      "+----------+\n",
+      "|     alice|\n",
+      "|         F|\n",
+      "|    32\n",
+      "bob|\n",
+      "|         M|\n",
+      "|38\n",
+      "Charlie|\n",
+      "|         M|\n",
+      "|        48|\n",
+      "+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_sep.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.5.2 Read Multiple text files\n",
+    "\n",
+    "Note if you put a folder at the input, spark will read all the text file in it"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "users1.txt  users2.txt\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "folder_path=\"data/text\"\n",
+    "! ls {folder_path}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "\n",
+    "df_multi=spark.read.text(folder_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+\n",
+      "|       value|\n",
+      "+------------+\n",
+      "|  alice F 32|\n",
+      "|    bob M 38|\n",
+      "|Charlie M 48|\n",
+      "|   toto F 32|\n",
+      "|   titi M 38|\n",
+      "|   tata M 48|\n",
+      "+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_multi.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If you want all content of a file as a line, you can use the option wholetext=True. In scala, it will be\n",
+    "\n",
+    "```scala\n",
+    "val df3 = spark.read.option(\"wholetext\", true).text(path)\n",
+    "```\n",
+    "\n",
+    "In java, it will be\n",
+    "\n",
+    "```java\n",
+    "Dataset<Row> df3 = spark.read().option(\"wholetext\", \"true\").text(path);\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|               value|\n",
+      "+--------------------+\n",
+      "|alice F 32\n",
+      "bob M ...|\n",
+      "|toto F 32\n",
+      "titi M ...|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_full=spark.read.text(folder_path,wholetext=True)\n",
+    "df_full.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.5.3 Read text file into RDD\n",
+    "\n",
+    "In above example, we read text files and returns a dataframe. We can also return an RDD instead.\n",
+    "\n",
+    "We can use two methods:\n",
+    "- textFile()\n",
+    "- wholeTextFiles()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "sc=spark.sparkContext\n",
+    "text_rdd=sc.textFile(text_file_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alice F 32', 'bob M 38', 'Charlie M 48']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  collect will send all partitions of the rdd to driver and return it as a list\n",
+    "list1=text_rdd.collect()\n",
+    "print(list1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "file_rdd=sc.wholeTextFiles(folder_path)\n",
+    "list2=file_rdd.collect()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('file:/home/pliu/PycharmProjects/PySparkCommonFunc/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/data/text/users1.txt', 'alice F 32\\nbob M 38\\nCharlie M 48'), ('file:/home/pliu/PycharmProjects/PySparkCommonFunc/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/data/text/users2.txt', 'toto F 32\\ntiti M 38\\ntata M 48')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
