add compression example

--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/05_ReadWriteTextFile.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/05_ReadWriteTextFile.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
@@ -34,20 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/02/15 15:47:13 WARN Utils: Your hostname, pliu-SATELLITE-P850 resolves to a loopback address: 127.0.1.1; using 172.22.0.33 instead (on interface wlp3s0)\n",
-      "22/02/15 15:47:13 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/02/15 16:00:57 WARN Utils: Your hostname, pliu-SATELLITE-P850 resolves to a loopback address: 127.0.1.1; using 172.22.0.33 instead (on interface wlp3s0)\n",
+      "22/02/15 16:00:57 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "WARNING: An illegal reflective access operation has occurred\n",
       "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/spark/spark-3.1.2/jars/spark-unsafe_2.12-3.1.2.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
       "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
       "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
       "WARNING: All illegal access operations will be denied in a future release\n",
-      "22/02/15 15:47:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/02/15 16:00:57 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "text_file_path=\"data/text/users1.txt\"\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -278,7 +278,6 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "\n",
     "df_multi=spark.read.text(folder_path)"
    ],
    "metadata": {
@@ -344,27 +343,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "source": [
+    "df_full=spark.read.text(folder_path,wholetext=True)\n",
+    "df_full.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.5.3 Write text file\n",
+    "\n",
+    "Below is an example of how to write text files from a dataframe. Note for each partition, a textfile will be generated."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+\n",
-      "|               value|\n",
-      "+--------------------+\n",
-      "|alice F 32\n",
-      "bob M ...|\n",
-      "|toto F 32\n",
-      "titi M ...|\n",
-      "+--------------------+\n",
-      "\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "df_full=spark.read.text(folder_path,wholetext=True)\n",
-    "df_full.show()"
+    "print(df_multi.rdd.getNumPartitions())\n",
+    "df_multi.write.mode(\"overwrite\").text(\"/tmp/output_test\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -376,7 +396,33 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 3.5.3 Read text file into RDD\n",
+    "If you want, you can also provide a compress codec to compress the text file"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "df_full.write.mode(\"overwrite\").text(\"/tmp/output_test\",compression=\"gzip\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.5.4 Read text file into RDD\n",
     "\n",
     "In above example, we read text files and returns a dataframe. We can also return an RDD instead.\n",
     "\n",
